tcc/src/tc_parser.output
Terminals unused in grammar

   T_Inc
   T_Dec


State 137 conflicts: 1 shift/reduce


Grammar

    0 $accept: main $end

    1 $@1: %empty

    2 main: $@1 program

    3 program: external_declaration
    4        | program external_declaration

    5 external_declaration: declaration
    6                     | function_definition

    7 declaration: T_Int declarator_list ';'

    8 declarator_list: declarator
    9                | declarator_list ',' declarator

   10 declarator: Identifier

   11 function_definition: T_Int func_def_declarator subroutien_up '(' ')' compound_statement subroutien_down
   12                    | T_Int func_def_declarator subroutien_up '(' parameter_type_list ')' compound_statement subroutien_down

   13 func_def_declarator: declarator

   14 parameter_type_list: parameter_declaration
   15                    | parameter_type_list ',' parameter_declaration

   16 parameter_declaration: T_Int declarator

   17 statement: ';'
   18          | expression ';'
   19          | compound_statement
   20          | T_If '(' expression ')' statement
   21          | T_If '(' expression ')' statement T_Else statement
   22          | T_While '(' expression ')' statement
   23          | T_Return expression ';'
   24          | T_For '(' expression ';' expression ';' expression ')' statement

   25 compound_statement: subroutien_up '{' declaration_list '}' subroutien_down
   26                   | subroutien_up '{' declaration_list statement_list '}' subroutien_down
   27                   | subroutien_up '{' statement_list '}' subroutien_down
   28                   | subroutien_up '{' '}' subroutien_down

   29 subroutien_up: %empty

   30 subroutien_down: %empty

   31 declaration_list: declaration
   32                 | declaration_list declaration

   33 statement_list: statement
   34               | statement_list statement

   35 expression: assign_expr
   36           | expression ',' assign_expr

   37 assign_expr: logical_OR_expr
   38            | Identifier '=' assign_expr
   39            | Identifier T_AddAssign assign_expr
   40            | Identifier T_SubAssign assign_expr

   41 logical_OR_expr: logical_AND_expr
   42                | logical_OR_expr T_Or logical_AND_expr

   43 logical_AND_expr: bit_or_expr
   44                 | logical_AND_expr T_And bit_or_expr

   45 bit_or_expr: bit_xor_expr
   46            | bit_or_expr '|' bit_xor_expr

   47 bit_xor_expr: bit_and_expr
   48             | bit_xor_expr '^' bit_and_expr

   49 bit_and_expr: equality_expr
   50             | bit_and_expr '&' equality_expr

   51 equality_expr: relational_expr
   52              | equality_expr T_Equal relational_expr
   53              | equality_expr T_NotEqual relational_expr

   54 relational_expr: add_expr
   55                | relational_expr '<' add_expr
   56                | relational_expr '>' add_expr
   57                | relational_expr T_GreaterEqual add_expr
   58                | relational_expr T_LessEqual add_expr

   59 add_expr: mult_expr
   60         | add_expr '+' mult_expr
   61         | add_expr '-' mult_expr

   62 mult_expr: unary_expr
   63          | mult_expr '*' unary_expr
   64          | mult_expr '/' unary_expr

   65 unary_expr: postfix_expr
   66           | '-' unary_expr

   67 postfix_expr: primary_expr
   68             | func_call_identifier '(' argument_expression_list ')'
   69             | func_call_identifier '(' ')'

   70 func_call_identifier: Identifier

   71 primary_expr: Identifier
   72             | constant
   73             | '(' expression ')'

   74 argument_expression_list: assign_expr
   75                         | argument_expression_list ',' assign_expr

   76 constant: Integer

   77 Identifier: Id


Terminals, with rules where they appear

$end (0) 0
'&' (38) 50
'(' (40) 11 12 20 21 22 24 68 69 73
')' (41) 11 12 20 21 22 24 68 69 73
'*' (42) 63
'+' (43) 60
',' (44) 9 15 36 75
'-' (45) 61 66
'/' (47) 64
';' (59) 7 17 18 23 24
'<' (60) 55
'=' (61) 38
'>' (62) 56
'^' (94) 48
'{' (123) 25 26 27 28
'|' (124) 46
'}' (125) 25 26 27 28
error (256)
T_Int (258) 7 11 12 16
T_If (259) 20 21
T_Else (260) 21
T_While (261) 22
T_Return (262) 23
T_For (263) 24
T_Inc (264)
T_Dec (265)
Id (266) 77
Integer (267) 76
T_Equal (268) 52
T_Or (269) 42
T_And (270) 44
T_NotEqual (271) 53
T_LessEqual (272) 58
T_GreaterEqual (273) 57
T_AddAssign (274) 39
T_SubAssign (275) 40


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
main (38)
    on left: 2, on right: 0
$@1 (39)
    on left: 1, on right: 2
program (40)
    on left: 3 4, on right: 2 4
external_declaration (41)
    on left: 5 6, on right: 3 4
declaration (42)
    on left: 7, on right: 5 31 32
declarator_list (43)
    on left: 8 9, on right: 7 9
declarator (44)
    on left: 10, on right: 8 9 13 16
function_definition (45)
    on left: 11 12, on right: 6
func_def_declarator (46)
    on left: 13, on right: 11 12
parameter_type_list (47)
    on left: 14 15, on right: 12 15
parameter_declaration (48)
    on left: 16, on right: 14 15
statement (49)
    on left: 17 18 19 20 21 22 23 24, on right: 20 21 22 24 33 34
compound_statement (50)
    on left: 25 26 27 28, on right: 11 12 19
subroutien_up (51)
    on left: 29, on right: 11 12 25 26 27 28
subroutien_down (52)
    on left: 30, on right: 11 12 25 26 27 28
declaration_list (53)
    on left: 31 32, on right: 25 26 32
statement_list (54)
    on left: 33 34, on right: 26 27 34
expression (55)
    on left: 35 36, on right: 18 20 21 22 23 24 36 73
assign_expr (56)
    on left: 37 38 39 40, on right: 35 36 38 39 40 74 75
logical_OR_expr (57)
    on left: 41 42, on right: 37 42
logical_AND_expr (58)
    on left: 43 44, on right: 41 42 44
bit_or_expr (59)
    on left: 45 46, on right: 43 44 46
bit_xor_expr (60)
    on left: 47 48, on right: 45 46 48
bit_and_expr (61)
    on left: 49 50, on right: 47 48 50
equality_expr (62)
    on left: 51 52 53, on right: 49 50 52 53
relational_expr (63)
    on left: 54 55 56 57 58, on right: 51 52 53 55 56 57 58
add_expr (64)
    on left: 59 60 61, on right: 54 55 56 57 58 60 61
mult_expr (65)
    on left: 62 63 64, on right: 59 60 61 63 64
unary_expr (66)
    on left: 65 66, on right: 62 63 64 66
postfix_expr (67)
    on left: 67 68 69, on right: 65
func_call_identifier (68)
    on left: 70, on right: 68 69
primary_expr (69)
    on left: 71 72 73, on right: 67
argument_expression_list (70)
    on left: 74 75, on right: 68 75
constant (71)
    on left: 76, on right: 72
Identifier (72)
    on left: 77, on right: 10 38 39 40 70 71


State 0

    0 $accept: . main $end

    $default  reduce using rule 1 ($@1)

    main  go to state 1
    $@1   go to state 2


State 1

    0 $accept: main . $end

    $end  shift, and go to state 3


State 2

    2 main: $@1 . program

    T_Int  shift, and go to state 4

    program               go to state 5
    external_declaration  go to state 6
    declaration           go to state 7
    function_definition   go to state 8


State 3

    0 $accept: main $end .

    $default  accept


State 4

    7 declaration: T_Int . declarator_list ';'
   11 function_definition: T_Int . func_def_declarator subroutien_up '(' ')' compound_statement subroutien_down
   12                    | T_Int . func_def_declarator subroutien_up '(' parameter_type_list ')' compound_statement subroutien_down

    Id  shift, and go to state 9

    declarator_list      go to state 10
    declarator           go to state 11
    func_def_declarator  go to state 12
    Identifier           go to state 13


State 5

    2 main: $@1 program .
    4 program: program . external_declaration

    T_Int  shift, and go to state 4

    $default  reduce using rule 2 (main)

    external_declaration  go to state 14
    declaration           go to state 7
    function_definition   go to state 8


State 6

    3 program: external_declaration .

    $default  reduce using rule 3 (program)


State 7

    5 external_declaration: declaration .

    $default  reduce using rule 5 (external_declaration)


State 8

    6 external_declaration: function_definition .

    $default  reduce using rule 6 (external_declaration)


State 9

   77 Identifier: Id .

    $default  reduce using rule 77 (Identifier)


State 10

    7 declaration: T_Int declarator_list . ';'
    9 declarator_list: declarator_list . ',' declarator

    ';'  shift, and go to state 15
    ','  shift, and go to state 16


State 11

    8 declarator_list: declarator .
   13 func_def_declarator: declarator .

    '('       reduce using rule 13 (func_def_declarator)
    $default  reduce using rule 8 (declarator_list)


State 12

   11 function_definition: T_Int func_def_declarator . subroutien_up '(' ')' compound_statement subroutien_down
   12                    | T_Int func_def_declarator . subroutien_up '(' parameter_type_list ')' compound_statement subroutien_down

    $default  reduce using rule 29 (subroutien_up)

    subroutien_up  go to state 17


State 13

   10 declarator: Identifier .

    $default  reduce using rule 10 (declarator)


State 14

    4 program: program external_declaration .

    $default  reduce using rule 4 (program)


State 15

    7 declaration: T_Int declarator_list ';' .

    $default  reduce using rule 7 (declaration)


State 16

    9 declarator_list: declarator_list ',' . declarator

    Id  shift, and go to state 9

    declarator  go to state 18
    Identifier  go to state 13


State 17

   11 function_definition: T_Int func_def_declarator subroutien_up . '(' ')' compound_statement subroutien_down
   12                    | T_Int func_def_declarator subroutien_up . '(' parameter_type_list ')' compound_statement subroutien_down

    '('  shift, and go to state 19


State 18

    9 declarator_list: declarator_list ',' declarator .

    $default  reduce using rule 9 (declarator_list)


State 19

   11 function_definition: T_Int func_def_declarator subroutien_up '(' . ')' compound_statement subroutien_down
   12                    | T_Int func_def_declarator subroutien_up '(' . parameter_type_list ')' compound_statement subroutien_down

    T_Int  shift, and go to state 20
    ')'    shift, and go to state 21

    parameter_type_list    go to state 22
    parameter_declaration  go to state 23


State 20

   16 parameter_declaration: T_Int . declarator

    Id  shift, and go to state 9

    declarator  go to state 24
    Identifier  go to state 13


State 21

   11 function_definition: T_Int func_def_declarator subroutien_up '(' ')' . compound_statement subroutien_down

    $default  reduce using rule 29 (subroutien_up)

    compound_statement  go to state 25
    subroutien_up       go to state 26


State 22

   12 function_definition: T_Int func_def_declarator subroutien_up '(' parameter_type_list . ')' compound_statement subroutien_down
   15 parameter_type_list: parameter_type_list . ',' parameter_declaration

    ','  shift, and go to state 27
    ')'  shift, and go to state 28


State 23

   14 parameter_type_list: parameter_declaration .

    $default  reduce using rule 14 (parameter_type_list)


State 24

   16 parameter_declaration: T_Int declarator .

    $default  reduce using rule 16 (parameter_declaration)


State 25

   11 function_definition: T_Int func_def_declarator subroutien_up '(' ')' compound_statement . subroutien_down

    $default  reduce using rule 30 (subroutien_down)

    subroutien_down  go to state 29


State 26

   25 compound_statement: subroutien_up . '{' declaration_list '}' subroutien_down
   26                   | subroutien_up . '{' declaration_list statement_list '}' subroutien_down
   27                   | subroutien_up . '{' statement_list '}' subroutien_down
   28                   | subroutien_up . '{' '}' subroutien_down

    '{'  shift, and go to state 30


State 27

   15 parameter_type_list: parameter_type_list ',' . parameter_declaration

    T_Int  shift, and go to state 20

    parameter_declaration  go to state 31


State 28

   12 function_definition: T_Int func_def_declarator subroutien_up '(' parameter_type_list ')' . compound_statement subroutien_down

    $default  reduce using rule 29 (subroutien_up)

    compound_statement  go to state 32
    subroutien_up       go to state 26


State 29

   11 function_definition: T_Int func_def_declarator subroutien_up '(' ')' compound_statement subroutien_down .

    $default  reduce using rule 11 (function_definition)


State 30

   25 compound_statement: subroutien_up '{' . declaration_list '}' subroutien_down
   26                   | subroutien_up '{' . declaration_list statement_list '}' subroutien_down
   27                   | subroutien_up '{' . statement_list '}' subroutien_down
   28                   | subroutien_up '{' . '}' subroutien_down

    T_Int     shift, and go to state 33
    T_If      shift, and go to state 34
    T_While   shift, and go to state 35
    T_Return  shift, and go to state 36
    T_For     shift, and go to state 37
    Id        shift, and go to state 9
    Integer   shift, and go to state 38
    ';'       shift, and go to state 39
    '('       shift, and go to state 40
    '}'       shift, and go to state 41
    '-'       shift, and go to state 42

    $default  reduce using rule 29 (subroutien_up)

    declaration           go to state 43
    statement             go to state 44
    compound_statement    go to state 45
    subroutien_up         go to state 26
    declaration_list      go to state 46
    statement_list        go to state 47
    expression            go to state 48
    assign_expr           go to state 49
    logical_OR_expr       go to state 50
    logical_AND_expr      go to state 51
    bit_or_expr           go to state 52
    bit_xor_expr          go to state 53
    bit_and_expr          go to state 54
    equality_expr         go to state 55
    relational_expr       go to state 56
    add_expr              go to state 57
    mult_expr             go to state 58
    unary_expr            go to state 59
    postfix_expr          go to state 60
    func_call_identifier  go to state 61
    primary_expr          go to state 62
    constant              go to state 63
    Identifier            go to state 64


State 31

   15 parameter_type_list: parameter_type_list ',' parameter_declaration .

    $default  reduce using rule 15 (parameter_type_list)


State 32

   12 function_definition: T_Int func_def_declarator subroutien_up '(' parameter_type_list ')' compound_statement . subroutien_down

    $default  reduce using rule 30 (subroutien_down)

    subroutien_down  go to state 65


State 33

    7 declaration: T_Int . declarator_list ';'

    Id  shift, and go to state 9

    declarator_list  go to state 10
    declarator       go to state 66
    Identifier       go to state 13


State 34

   20 statement: T_If . '(' expression ')' statement
   21          | T_If . '(' expression ')' statement T_Else statement

    '('  shift, and go to state 67


State 35

   22 statement: T_While . '(' expression ')' statement

    '('  shift, and go to state 68


State 36

   23 statement: T_Return . expression ';'

    Id       shift, and go to state 9
    Integer  shift, and go to state 38
    '('      shift, and go to state 40
    '-'      shift, and go to state 42

    expression            go to state 69
    assign_expr           go to state 49
    logical_OR_expr       go to state 50
    logical_AND_expr      go to state 51
    bit_or_expr           go to state 52
    bit_xor_expr          go to state 53
    bit_and_expr          go to state 54
    equality_expr         go to state 55
    relational_expr       go to state 56
    add_expr              go to state 57
    mult_expr             go to state 58
    unary_expr            go to state 59
    postfix_expr          go to state 60
    func_call_identifier  go to state 61
    primary_expr          go to state 62
    constant              go to state 63
    Identifier            go to state 64


State 37

   24 statement: T_For . '(' expression ';' expression ';' expression ')' statement

    '('  shift, and go to state 70


State 38

   76 constant: Integer .

    $default  reduce using rule 76 (constant)


State 39

   17 statement: ';' .

    $default  reduce using rule 17 (statement)


State 40

   73 primary_expr: '(' . expression ')'

    Id       shift, and go to state 9
    Integer  shift, and go to state 38
    '('      shift, and go to state 40
    '-'      shift, and go to state 42

    expression            go to state 71
    assign_expr           go to state 49
    logical_OR_expr       go to state 50
    logical_AND_expr      go to state 51
    bit_or_expr           go to state 52
    bit_xor_expr          go to state 53
    bit_and_expr          go to state 54
    equality_expr         go to state 55
    relational_expr       go to state 56
    add_expr              go to state 57
    mult_expr             go to state 58
    unary_expr            go to state 59
    postfix_expr          go to state 60
    func_call_identifier  go to state 61
    primary_expr          go to state 62
    constant              go to state 63
    Identifier            go to state 64


State 41

   28 compound_statement: subroutien_up '{' '}' . subroutien_down

    $default  reduce using rule 30 (subroutien_down)

    subroutien_down  go to state 72


State 42

   66 unary_expr: '-' . unary_expr

    Id       shift, and go to state 9
    Integer  shift, and go to state 38
    '('      shift, and go to state 40
    '-'      shift, and go to state 42

    unary_expr            go to state 73
    postfix_expr          go to state 60
    func_call_identifier  go to state 61
    primary_expr          go to state 62
    constant              go to state 63
    Identifier            go to state 74


State 43

   31 declaration_list: declaration .

    $default  reduce using rule 31 (declaration_list)


State 44

   33 statement_list: statement .

    $default  reduce using rule 33 (statement_list)


State 45

   19 statement: compound_statement .

    $default  reduce using rule 19 (statement)


State 46

   25 compound_statement: subroutien_up '{' declaration_list . '}' subroutien_down
   26                   | subroutien_up '{' declaration_list . statement_list '}' subroutien_down
   32 declaration_list: declaration_list . declaration

    T_Int     shift, and go to state 33
    T_If      shift, and go to state 34
    T_While   shift, and go to state 35
    T_Return  shift, and go to state 36
    T_For     shift, and go to state 37
    Id        shift, and go to state 9
    Integer   shift, and go to state 38
    ';'       shift, and go to state 39
    '('       shift, and go to state 40
    '}'       shift, and go to state 75
    '-'       shift, and go to state 42

    $default  reduce using rule 29 (subroutien_up)

    declaration           go to state 76
    statement             go to state 44
    compound_statement    go to state 45
    subroutien_up         go to state 26
    statement_list        go to state 77
    expression            go to state 48
    assign_expr           go to state 49
    logical_OR_expr       go to state 50
    logical_AND_expr      go to state 51
    bit_or_expr           go to state 52
    bit_xor_expr          go to state 53
    bit_and_expr          go to state 54
    equality_expr         go to state 55
    relational_expr       go to state 56
    add_expr              go to state 57
    mult_expr             go to state 58
    unary_expr            go to state 59
    postfix_expr          go to state 60
    func_call_identifier  go to state 61
    primary_expr          go to state 62
    constant              go to state 63
    Identifier            go to state 64


State 47

   27 compound_statement: subroutien_up '{' statement_list . '}' subroutien_down
   34 statement_list: statement_list . statement

    T_If      shift, and go to state 34
    T_While   shift, and go to state 35
    T_Return  shift, and go to state 36
    T_For     shift, and go to state 37
    Id        shift, and go to state 9
    Integer   shift, and go to state 38
    ';'       shift, and go to state 39
    '('       shift, and go to state 40
    '}'       shift, and go to state 78
    '-'       shift, and go to state 42

    $default  reduce using rule 29 (subroutien_up)

    statement             go to state 79
    compound_statement    go to state 45
    subroutien_up         go to state 26
    expression            go to state 48
    assign_expr           go to state 49
    logical_OR_expr       go to state 50
    logical_AND_expr      go to state 51
    bit_or_expr           go to state 52
    bit_xor_expr          go to state 53
    bit_and_expr          go to state 54
    equality_expr         go to state 55
    relational_expr       go to state 56
    add_expr              go to state 57
    mult_expr             go to state 58
    unary_expr            go to state 59
    postfix_expr          go to state 60
    func_call_identifier  go to state 61
    primary_expr          go to state 62
    constant              go to state 63
    Identifier            go to state 64


State 48

   18 statement: expression . ';'
   36 expression: expression . ',' assign_expr

    ';'  shift, and go to state 80
    ','  shift, and go to state 81


State 49

   35 expression: assign_expr .

    $default  reduce using rule 35 (expression)


State 50

   37 assign_expr: logical_OR_expr .
   42 logical_OR_expr: logical_OR_expr . T_Or logical_AND_expr

    T_Or  shift, and go to state 82

    $default  reduce using rule 37 (assign_expr)


State 51

   41 logical_OR_expr: logical_AND_expr .
   44 logical_AND_expr: logical_AND_expr . T_And bit_or_expr

    T_And  shift, and go to state 83

    $default  reduce using rule 41 (logical_OR_expr)


State 52

   43 logical_AND_expr: bit_or_expr .
   46 bit_or_expr: bit_or_expr . '|' bit_xor_expr

    '|'  shift, and go to state 84

    $default  reduce using rule 43 (logical_AND_expr)


State 53

   45 bit_or_expr: bit_xor_expr .
   48 bit_xor_expr: bit_xor_expr . '^' bit_and_expr

    '^'  shift, and go to state 85

    $default  reduce using rule 45 (bit_or_expr)


State 54

   47 bit_xor_expr: bit_and_expr .
   50 bit_and_expr: bit_and_expr . '&' equality_expr

    '&'  shift, and go to state 86

    $default  reduce using rule 47 (bit_xor_expr)


State 55

   49 bit_and_expr: equality_expr .
   52 equality_expr: equality_expr . T_Equal relational_expr
   53              | equality_expr . T_NotEqual relational_expr

    T_Equal     shift, and go to state 87
    T_NotEqual  shift, and go to state 88

    $default  reduce using rule 49 (bit_and_expr)


State 56

   51 equality_expr: relational_expr .
   55 relational_expr: relational_expr . '<' add_expr
   56                | relational_expr . '>' add_expr
   57                | relational_expr . T_GreaterEqual add_expr
   58                | relational_expr . T_LessEqual add_expr

    T_LessEqual     shift, and go to state 89
    T_GreaterEqual  shift, and go to state 90
    '<'             shift, and go to state 91
    '>'             shift, and go to state 92

    $default  reduce using rule 51 (equality_expr)


State 57

   54 relational_expr: add_expr .
   60 add_expr: add_expr . '+' mult_expr
   61         | add_expr . '-' mult_expr

    '+'  shift, and go to state 93
    '-'  shift, and go to state 94

    $default  reduce using rule 54 (relational_expr)


State 58

   59 add_expr: mult_expr .
   63 mult_expr: mult_expr . '*' unary_expr
   64          | mult_expr . '/' unary_expr

    '*'  shift, and go to state 95
    '/'  shift, and go to state 96

    $default  reduce using rule 59 (add_expr)


State 59

   62 mult_expr: unary_expr .

    $default  reduce using rule 62 (mult_expr)


State 60

   65 unary_expr: postfix_expr .

    $default  reduce using rule 65 (unary_expr)


State 61

   68 postfix_expr: func_call_identifier . '(' argument_expression_list ')'
   69             | func_call_identifier . '(' ')'

    '('  shift, and go to state 97


State 62

   67 postfix_expr: primary_expr .

    $default  reduce using rule 67 (postfix_expr)


State 63

   72 primary_expr: constant .

    $default  reduce using rule 72 (primary_expr)


State 64

   38 assign_expr: Identifier . '=' assign_expr
   39            | Identifier . T_AddAssign assign_expr
   40            | Identifier . T_SubAssign assign_expr
   70 func_call_identifier: Identifier .
   71 primary_expr: Identifier .

    T_AddAssign  shift, and go to state 98
    T_SubAssign  shift, and go to state 99
    '='          shift, and go to state 100

    '('       reduce using rule 70 (func_call_identifier)
    $default  reduce using rule 71 (primary_expr)


State 65

   12 function_definition: T_Int func_def_declarator subroutien_up '(' parameter_type_list ')' compound_statement subroutien_down .

    $default  reduce using rule 12 (function_definition)


State 66

    8 declarator_list: declarator .

    $default  reduce using rule 8 (declarator_list)


State 67

   20 statement: T_If '(' . expression ')' statement
   21          | T_If '(' . expression ')' statement T_Else statement

    Id       shift, and go to state 9
    Integer  shift, and go to state 38
    '('      shift, and go to state 40
    '-'      shift, and go to state 42

    expression            go to state 101
    assign_expr           go to state 49
    logical_OR_expr       go to state 50
    logical_AND_expr      go to state 51
    bit_or_expr           go to state 52
    bit_xor_expr          go to state 53
    bit_and_expr          go to state 54
    equality_expr         go to state 55
    relational_expr       go to state 56
    add_expr              go to state 57
    mult_expr             go to state 58
    unary_expr            go to state 59
    postfix_expr          go to state 60
    func_call_identifier  go to state 61
    primary_expr          go to state 62
    constant              go to state 63
    Identifier            go to state 64


State 68

   22 statement: T_While '(' . expression ')' statement

    Id       shift, and go to state 9
    Integer  shift, and go to state 38
    '('      shift, and go to state 40
    '-'      shift, and go to state 42

    expression            go to state 102
    assign_expr           go to state 49
    logical_OR_expr       go to state 50
    logical_AND_expr      go to state 51
    bit_or_expr           go to state 52
    bit_xor_expr          go to state 53
    bit_and_expr          go to state 54
    equality_expr         go to state 55
    relational_expr       go to state 56
    add_expr              go to state 57
    mult_expr             go to state 58
    unary_expr            go to state 59
    postfix_expr          go to state 60
    func_call_identifier  go to state 61
    primary_expr          go to state 62
    constant              go to state 63
    Identifier            go to state 64


State 69

   23 statement: T_Return expression . ';'
   36 expression: expression . ',' assign_expr

    ';'  shift, and go to state 103
    ','  shift, and go to state 81


State 70

   24 statement: T_For '(' . expression ';' expression ';' expression ')' statement

    Id       shift, and go to state 9
    Integer  shift, and go to state 38
    '('      shift, and go to state 40
    '-'      shift, and go to state 42
